--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <img class="portfolio__container__image" src="images/traveltally.png" alt="TravelTally"> 
                 <div class="portfolio__description__layer">
                     <p class="portform__description__text">
-                        <h2>MOBILE APP DESIGN</h2>
+                        <h2>Mobile App Design</h2>
                         <h1>TravelTally App</h1>
                         Providing a budgeting solution for  travellers to help keep track of expenses when on the go. Enabling users to focus on creating memories, without losing control of their finances.                    
                     </p>
