--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
             </div>
             <div class="my__description">
                 <div class="my__title">
-                    Hi, I'm Vanika
+                    <p>Hi, I'm Vanika</p>
                 </div>
                 <div class = "my__job">
-                    UX/UI designer
+                    <p>UX/UI designer</p>
                 </div>
                 <div class = "my__description__job">
-                    I enjoy solving user problems and managing teams based on their ability. Passionate about solving user problems in a creative way to suit the needs of both users and the business.
+                    <p>I enjoy solving user problems and managing teams based on their ability. Passionate about solving user problems in a creative way to suit the needs of both users and the business.</p>
                 </div>
                 <div>
                     <button class="primary__button">
@@ -79,7 +79,7 @@
                         <img src="images/userResearch.png" alt="User Reasearch"> 
                     </div>
                     <div class="my__skills__card__body__text">
-                        Getting to know my user through quantitative and qualitative methods. Gaining a deep understanding of their experiences and needs, in order to identify pain points. These insights serve as the foundation to produce solutions that will have a positive impact.
+                        <p>Getting to know my user through quantitative and qualitative methods. Gaining a deep understanding of their experiences and needs, in order to identify pain points. These insights serve as the foundation to produce solutions that will have a positive impact.</p>
                     </div>
                 </div> 
             </div>
@@ -92,7 +92,7 @@
                         <img src="images/userEmpathy.png" alt="User Empathy"> 
                     </div>
                     <div class="my__skills__card__body__text">
-                        Synthesising user feedback and thinking from the perspective of my potential user. Employing a human-centered design approach in order to understand my users’ emotions, motivations and needs. Good listening skills to gather insights from users.
+                        <p>Synthesising user feedback and thinking from the perspective of my potential user. Employing a human-centered design approach in order to understand my users’ emotions, motivations and needs. Good listening skills to gather insights from users.</p>
                     </div>
                 </div>
             </div>
@@ -105,7 +105,7 @@
                         <img src="images/quaInterviews.png" alt="Qualitative Interviews"> 
                     </div>
                     <div class="my__skills__card__body__text">
-                        Creating an environment in which users feel comfortable to share their insights. Using broad, open questions to ensure freedom of speech, will in turn enable me to have an in depth understanding of my user and their experiences.
+                       <p>Creating an environment in which users feel comfortable to share their insights. Using broad, open questions to ensure freedom of speech, will in turn enable me to have an in depth understanding of my user and their experiences.</p> 
                     </div>
                 </div>
             </div>
@@ -188,7 +188,7 @@
                 Let's Connect
             </div>
             <div class="connect__questions">
-                Have any questions or looking to work together? Reach out and I'll be happy to get back to you soon!
+                <p>Have any questions or looking to work together? Reach out and I'll be happy to get back to you soon!</p>
             </div>
             <a target="_blank" href="https://www.linkedin.com/in/vanika-sharma-a14713191/"><img class="connect__linkedin" src="images/linkedin.png" alt="LinkedIn"></a>
         </div>
